<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Openwrt Router Control</string>
    <string name="shortcut_led_on_short">Enable LED</string>
    <string name="shortcut_led_on_long">Turn on LED</string>
    <string name="shortcut_led_off_short">Disable LED</string>
    <string name="shortcut_led_off_long">Turn off LED</string>
    <string name="shortcut_reboot_short">Reboot Router</string>
    <string name="shortcut_reboot_long">Reboot Router</string>
    <string name="shortcut_vpn_on_short">Enable VPN</string>
    <string name="shortcut_vpn_on_long">Turn on VPN</string>
    <string name="shortcut_vpn_off_short">Disable VPN</string>
    <string name="shortcut_vpn_off_long">Turn off VPN</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_console">Console</string>
    <string name="tab_test">Tools</string>
    <string name="tab_reboot">Reboot</string>
    <string name="speed_test_title">M-Lab Speed Test</string>
    <string name="dialog_reboot_title">Router Reboot</string>
    <string name="dialog_reboot_msg">Are you sure you want to reboot the router? This will temporarily interrupt the network connection.</string>
    <string name="btn_reboot">Reboot</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_public_ip">Public IP</string>
    <string name="label_location">Location</string>
    <string name="label_provider">Provider</string>
    <string name="speed_download">Download ↓</string>
    <string name="speed_upload">Upload ↑</string>
    <string name="speedtest_policy_wrong">I agree topolicy</string>
    <string name="speedtest_policy_correct">I agree to data policy</string>
    <string name="speedtest_download_corrected">Download</string>
    <string name="speedtest_upload_corrected">Upload</string>
    <string name="label_processor">Processor</string>
    <string name="label_cpu">CPU</string>
    <string name="label_ram">RAM</string>
    <string name="label_uptime">Uptime</string>
    <string name="msg_waiting_traffic">Waiting for traffic data...</string>
    <string name="console_title">SSH Terminal</string>
    <string name="console_desc_clear">Clear logs</string>
    <string name="console_empty">Terminal is empty. Enter a command in the field below.</string>
    <string name="iperf_router_console_empty">Terminal is empty. Enter a command in the field below or use the already entered command to run the download test from the router to the smartphone for 30 seconds.</string>
    <string name="console_hint_command">Enter command</string>
    <string name="console_desc_send">Send</string>
    <string name="ssh_title">SSH Connection</string>
    <string name="ssh_desc_close">Close</string>
    <string name="ssh_instructions">Enter SSH login details of your OpenWrt router to collect statistics and manage VPN services.</string>
    <string name="ssh_host">IP Address</string>
    <string name="ssh_port">SSH Port</string>
    <string name="ssh_username">Login</string>
    <string name="ssh_password">SSH Password</string>
    <string name="ssh_password_short">Password</string>
    <string name="ssh_btn_hide">Hide</string>
    <string name="ssh_btn_show">Show</string>
    <string name="btn_connected">Connected</string>
    <string name="btn_connect">Connect</string>
    <string name="led_behavior_title">LED Behavior</string>
    <string name="led_always_on">Constantly on</string>
    <string name="led_traffic_indicator">Traffic indicator</string>
    <string name="wg_interface_title">WireGuard Interface</string>
    <string name="wg_select_interface">Select interface</string>
    <string name="wg_desc_select">Select Interface</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="btn_delete_conn">Delete connection</string>
    <string name="status_running">Running</string>
    <string name="status_running_inst">Running (%s)</string>
    <string name="status_stopped">Stopped</string>
    <string name="title_openvpn_service">OpenVPN Service</string>
    <string name="title_wireguard_interface">WireGuard Interface</string>
    <string name="status_wg_up">Interface %s is up</string>
    <string name="status_off">Off</string>
    <string name="status_on">On</string>
    <string name="title_router_led">Router LED</string>
    <string name="status_enabling">Enabling...</string>
    <string name="status_disabling">Disabling...</string>
    <string name="status_switching">Switching...</string>
    <string name="status_wg_off">%s Off</string>
    <string name="status_ovpn_stopped">%s Stopped</string>
    <string name="status_ovpn_running">%s Running</string>
    <string name="widget_ready">Ready</string>
    <string name="widget_init">Initializing...</string>
    <string name="widget_fill_app">Configure in app</string>
    <string name="widget_setup_req">Setup required</string>
    <string name="widget_checking">Checking...</string>
    <string name="widget_status">Status...</string>
    <string name="widget_updated">Updated</string>
    <string name="widget_error">Error</string>
    <string name="widget_error_red">Error 🔴</string>
    <string name="widget_turning_off">Turning off...</string>
    <string name="widget_turning_on">Turning on...</string>
    <string name="tile_led">LED</string>
    <string name="tile_on">On 🟢</string>
    <string name="tile_off">Off 🔴</string>
    <string name="tile_configure_app">Configure in app</string>
    <string name="tile_requesting">Requesting...</string>
    <string name="iperf_card_title">iPerf3 Server</string>
    <string name="iperf_card_desc">Measure local network speed</string>
    <string name="iperf_server_title">iPerf3.21 on %1$s</string>
    <string name="iperf_console_title">iPerf3 Server Console</string>
    <string name="router_console_title">Router Console</string>
    <string name="status_select_openvpn">Select OpenVPN by clicking the icon on the left</string>
    <string name="status_select_wireguard">Select Wireguard by clicking the icon on the left</string>
    <string name="status_select_vpn">Select OpenVPN / Wireguard by clicking the icon on the left</string>
    <string name="vpn_list_desc">List of connections</string>
    <string name="vpn_getting_data">Getting data from router...</string>
    <string name="vpn_applying_changes">Applying changes...</string>
    <string name="vpn_active">Active</string>
    <string name="vpn_no_active">No active VPN connections</string>
    <string name="vpn_all_disabled">All VPNs are disabled</string>
    <string name="vpn_available_title">Available VPNs. Select those that should be enabled</string>
    <string name="vpn_apply">Apply</string>
    <string name="vpn_amneziawg_interface">AmneziaWG Interface</string>
<string name="devices_title">Devices</string><string name="select_device_for_chart">Select a device to view its chart</string><string name="click_device_for_chart">Tap a device to view its chart</string><string name="no_connected_devices">No connected devices or data unavailable.</string><string name="connected_devices_count">%1$d devices connected</string><string name="link_speed">Link speed:</string><string name="port_mapping_warning">Warning: for this connection type, the total traffic of the router\'s physical port is shown, not just this device.</string><string name="traffic_not_available">Traffic not available on this router</string><string name="download_speed_format">Download: %.2f Mbps</string><string name="upload_speed_format">Upload: %.2f Mbps</string><string name="today_traffic_kb">today %.1f KB</string><string name="today_traffic_mb">today %.1f MB</string><string name="today_traffic_gb">today %.1f GB</string><string name="traffic_label">today:</string><string name="dns_adguard_default">AdGuard Default</string><string name="dns_adguard_family">AdGuard Family</string><string name="dns_adguard_unfiltered">AdGuard Unfiltered</string><string name="dns_cleanbrowsing_adult">CleanBrowsing Adult</string><string name="dns_cleanbrowsing_family">CleanBrowsing Family</string><string name="dns_cleanbrowsing_family_desc">CleanBrowsing Family</string><string name="dns_cleanbrowsing_security">CleanBrowsing Security</string><string name="dns_cloudflare_default">Cloudflare Default</string><string name="dns_cloudflare_family">Cloudflare Family</string><string name="dns_cloudflare_malware">Cloudflare Malware</string><string name="dns_controld_ads">ControlD Ads</string><string name="dns_controld_family">ControlD Family</string><string name="dns_controld_uncensored">ControlD Uncensored</string><string name="dns_desc_adguard">AdGuard</string><string name="dns_desc_cleanbrowsing">CleanBrowsing</string><string name="dns_desc_cloudflare">Cloudflare</string><string name="dns_desc_controld">ControlD</string><string name="dns_desc_google">Google</string><string name="dns_desc_opendns">OpenDNS</string><string name="dns_desc_quad9">Quad9</string><string name="dns_google_default">Google Default</string><string name="dns_opendns_family">OpenDNS Family</string><string name="dns_opendns_family_desc">OpenDNS Family</string><string name="dns_opendns_home">OpenDNS Home</string><string name="dns_quad9_default">Quad9 Default</string><string name="dns_quad9_ecs">Quad9 ECS</string><string name="dns_quad9_ecs_desc">Quad9 ECS</string><string name="ethernet">Ethernet</string><string name="format_days">%d days</string><string name="format_hours">%d hours</string><string name="format_mb_percent" formatted="false">%.1f MB (%.1f%%)</string><string name="format_minutes">%d min</string><string name="label_ip_colon">IP:</string><string name="label_mac_colon">MAC:</string><string name="label_today_colon">Today:</string><string name="no_ethernet_devices">No ethernet devices</string><string name="port_approximate">(approximate)</string><string name="port_unknown">(unknown)</string><string name="ssh_connected">SSH Connected</string><string name="ssh_disconnect">Disconnect</string><string name="ssh_terminal_active">Terminal Active</string><string name="status_please_wait">Please wait...</string><string name="status_restarting">Restarting...</string><string name="status_waiting_conn">Waiting for connection...</string><string name="wifi_24_ghz">Wi-Fi 2.4 GHz</string><string name="wifi_5_ghz">Wi-Fi 5 GHz</string><string name="wifi_6_ghz">Wi-Fi 6 GHz</string><string name="wifi_other">Wi-Fi Other</string><string name="action_close">Close</string><string name="msg_press_device_graph">Tap a device to view its chart</string><string name="msg_no_devices">No connected devices</string><string name="msg_devices_connected">%1$d devices connected</string><string name="msg_no_ethernet">No ethernet devices</string><string name="format_speed_dl">Download: %.2f Mbps</string><string name="format_speed_ul">Upload: %.2f Mbps</string><string name="format_bytes_kb">%.1f KB</string><string name="format_bytes_mb">%.1f MB</string><string name="format_bytes_gb">%.1f GB</string><string name="msg_link_speed">Link speed: %1$s Rx / %2$s Tx</string><string name="msg_shared_traffic_warning">Warning: traffic is shared for this port</string><string name="msg_traffic_unavailable">Traffic not available</string><string name="msg_install_nlbwmon">Install nlbwmon to enable traffic tracking.</string><string name="format_download_speed">Download: %.2f Mbps</string><string name="format_upload_speed">Upload: %.2f Mbps</string><string name="status_applying_changes">Applying changes...</string><string name="status_turning_on">Turning on...</string><string name="status_turning_off">Turning off...</string><string name="msg_no_selected_device">No device selected</string></resources>